--- a/BookStore/Content/Admin.css
+++ b/BookStore/Content/Admin.css
@@ -47,4 +47,20 @@ table.Grid {
 .validation-summary-valid {
   display: none; }
 
+.editor-field {
+  margin-bottom: 0.8em; }
+
+.editor-label {
+  font-weight: bold; }
+
+.editor-label:after {
+  content: ":"; }
+
+.text-box {
+  width: 25em; }
+
+.multi-line {
+  height: 5em;
+  font-family: Segoe UI, Verdana; }
+
 /*# sourceMappingURL=Admin.css.map */
