--- a/BookStore/Views/Admin/Index.cshtml
+++ b/BookStore/Views/Admin/Index.cshtml
@@ -35,26 +35,19 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>@Html.ActionLink(item.Title, "Edit", new { item.BookID })</td>
+        <td>@Html.DisplayFor(modelItem => item.Author)</td>
+        <td>@Html.DisplayFor(modelItem => item.Rate)</td>
+        <td>@Html.DisplayFor(modelItem => item.Genre)</td>
+        <td>@Html.DisplayFor(modelItem => item.Price)</td>
+        <td>@Html.DisplayFor(modelItem => item.Annotation)</td> 
+        <td class="NumericCol">@item.Price.ToString("c")</td>
         <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Author)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Genre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Annotation)
-        </td>        
-        <td>
-            @Html.ActionLink("Delete", "Delete", new { id=item.BookID })
+            @using (Html.BeginForm("Delete", "Admin"))
+            {
+                @Html.Hidden("BookID", item.BookID)
+                <input type="submit" value="Delete" />
+            }
         </td>
     </tr>
 }
