--- a/BookStore/Content/Site1.css
+++ b/BookStore/Content/Site1.css
@@ -3,10 +3,18 @@
   margin: 0; }
 
 .header {
+  padding: 10px;
   display: block;
   background-color: #444;
   border-bottom: 2px solid #111;
   color: White; }
+  .header h1 {
+    display: inline; }
+  .header a {
+    color: azure;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 22px;
+    text-decoration: none; }
 
 footer {
   display: block; }
