--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")      
+    @Scripts.Render("~/bundles/modernizr")    
     <meta name="description" content="The description of my page" />
 </head>
 <body>
@@ -13,20 +13,21 @@
         <div class="row">
             <div class="col-md-12 header">
                 <h1>Book Library</h1>
-                @Html.ActionLink("Wiki", "Wiki");
+                @Html.ActionLink("Admin/Index", "Index", "Admin");
+                @Html.ActionLink("Admin/Index/New", "Create", "Admin");
             </div>
         </div>
         <div class="row">
             <div class="col-md-3 col-lg-3">
                 @{Html.RenderAction("Menu", "Nav");}
             </div>
-            <div class="col-md-9 col-lg-9 content" >
+            <div class="col-md-9 col-lg-9 content">
                 @RenderBody()
             </div>
         </div>
     </div>
-  
-    
-       
+
+
+
 </body>
 </html>
