--- a/BookStore/Content/Admin.scss
+++ b/BookStore/Content/Admin.scss
@@ -7,57 +7,90 @@ h1 {
     padding-top: 0;
     font-weight: bold;
     font-size: 1.5em;
-    border-bottom:2px solid gray;
+    border-bottom: 2px solid gray;
 }
-div{
-    &.content{
-         padding:.9em;
-     }
-    &.Message{
-        background:gray;
-        color:white;
-        padding:.2em;
-        margin-top:.25em;
-    }
-}
-form{
-    margin-bottom:0;
-}
-table.Grid{
-    border-collapse:collapse;
-    width:100%;
-    td,th{
-        border-bottom:1px dotted gray;
-        text-align:left;
-        .NumericCol{
-            text-align:right;
-            padding-right:1em;
-        }
+
+div {
+    &.content {
+        padding: .9em;
     }
 
+    &.Message {
+        background: gray;
+        color: white;
+        padding: .2em;
+        margin-top: .25em;
+    }
+}
+
+form {
+    margin-bottom: 0;
+}
+
+table.Grid {
+    border-collapse: collapse;
+    width: 100%;
+
+    td, th {
+        border-bottom: 1px dotted gray;
+        text-align: left;
+
+        .NumericCol {
+            text-align: right;
+            padding-right: 1em;
+        }
+    }
 }
 
 .field-validation-error {
-	color: red;
-    display:block;
-}
-.field-validation-valid {
-	display: none;
-}
-.input-validation-error {
-	border: 1px solid red;
-	background-color: #ffeeee;
-}
-.validation-summary-errors {
-	font-weight: bold;
-	color: red;
-}
-.validation-summary-valid {
-	display: none;
+    color: red;
+    display: block;
 }
 
-.editor-field { margin-bottom: .8em; }
-.editor-label { font-weight: bold; }
-.editor-label:after { content: ":" }
-.text-box { width: 25em; }
-.multi-line { height: 5em; font-family: Segoe UI, Verdana; }
+.field-validation-valid {
+    display: none;
+}
+
+.input-validation-error {
+    border: 1px solid red;
+    background-color: #ffeeee;
+}
+
+.validation-summary-errors {
+    font-weight: bold;
+    color: red;
+}
+
+.validation-summary-valid {
+    display: none;
+}
+
+.editor-field {
+    margin-bottom: .8em;
+}
+
+.editor-label {
+    font-weight: bold;
+}
+
+.editor-label:after {
+    content: ":";
+}
+
+.text-box {
+    width: 25em;
+}
+
+.multi-line {
+    height: 5em;
+    font-family: Segoe UI, Verdana;
+}
+
+.findedimages {
+    display: inline;  
+
+    img {
+        max-height: 150px;
+        max-width: 150px;
+    }
+}
