--- a/BookStore/Content/Site1.css
+++ b/BookStore/Content/Site1.css
@@ -101,9 +101,17 @@ DIV.pager A.selected {
 
 .book img {
   float: right;
-  width: 200px;
-  height: 300px; }
+  max-width: 150px;
+  max-height: 150px; }
 .book h5 {
   color: red; }
+.book h1 {
+  font-size: 14px; }
+.book h2 {
+  font-size: 12px; }
+.book h3 {
+  font-size: 10px; }
+.book p {
+  font-size: 10px; }
 
 /*# sourceMappingURL=Site1.css.map */
