--- a/BookStore/Views/Admin/Create.cshtml
+++ b/BookStore/Views/Admin/Create.cshtml
@@ -1,21 +1,25 @@
-﻿@model BookStore.Domain.Entities.Book
+﻿@model BookStore.Domain.Entities.BookViewModel
 
 @{
     ViewBag.Title = "Create";
-    Layout = null;
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Create</h2>
+@using (Html.BeginForm())
+{
+    <div class="editor-label">@Html.LabelFor(b => b.Title, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Title, new { @class = "single-line" }) </div>
+    <div class="editor-label">@Html.LabelFor(b => b.AuthorName, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.AuthorName, new { @class = "single-line" })</div>
+    <input type="submit" value="Save" />
+    @Html.ActionLink("Cancel and return to List", "Index")
+}
 
-            @using (Html.BeginForm("FindBookImages", "Admin"))
-            {
-                @Html.TextBoxFor(model=>@Model.Author.Name)
-                @Html.TextBoxFor(model => @Model.Title)
-                <input type="submit" value="Save" />
-                @Html.ActionLink("Cancel and return to List", "Index")
-            }
-        
-            
-    
 
-          
+
+
+
+
+
+
