--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookStore.Domain.Entities.Book
+﻿@model BookStore.Domain.Entities.BookViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -6,9 +6,17 @@
 }
 
 <h2>Edit</h2>
-@using (Html.BeginForm("Edit","Admin"))
+@using (Html.BeginForm())
 {
-    @Html.EditorForModel()
+    <div class="editor-label">@Html.LabelFor(b => b.Title, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Title, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.AuthorName, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Genre, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Rate, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Annotation, new { @class = "single-line" })</div>
+    <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, Author = @Model.AuthorName }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>   
+    <div class="editor-field">@Html.EditorFor(b => b.Price, new { @class = "single-line" })</div>
     <input type="submit" value="Save" />
     @Html.ActionLink("Cancel and return to List", "Index")
 }
