--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -6,7 +6,7 @@
             <h2>@Model.Author.Name</h2>
             <p>@Model.Genre</p>
             <p>@Model.Annotation</p>
-            <h3 class="glyphicon glyphicon-star" aria-hidden="true">@Model.Rate</h3>
+            <h3 class="glyphicon glyphicon-star" aria-hidden="true">@Model.Rating</h3>
             <h3>@Model.Price.ToString("c")</h3>
         </div>
         <div class="col-md-4 col-lg-4">
