--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="editor-field">@Html.EditorFor(b => b.Title, new { @class = "single-line" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Author.Name, new { @class = "single-line" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Genre, new { @class = "single-line" })</div>
-    <div class="editor-field">@Html.EditorFor(b => b.Rate, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Rating, new { @class = "single-line" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Annotation, new { @class = "single-line" })</div>
     <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, Author = @Model.Author.Name }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>   
