--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -14,7 +14,7 @@
     <div class="editor-field">@Html.EditorFor(b => b.Author.Name, new { @class = "single-line" })</div>
     <div class="editor-label">@Html.LabelFor(b => b.Genre, new { @class = "single-line" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Genre, new { @class = "single-line" })</div>
-    <div class="editor-label">@Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { Title = @Model.Title, Author = @Model.Author.Name, bookID=@Model.BookID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</div>
+    <div class="editor-label">@Html.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { Title = @Model.Title, Author = @Model.Author.Name, bookID=@Model.BookID }, null )</div>
     <div class="editor-field">@Html.EditorFor(b => b.Annotation, new { @class = "single-line" })</div>
     <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, Author = @Model.Author.Name }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>
