--- a/BookStore/Views/Nav/Menu.cshtml
+++ b/BookStore/Views/Nav/Menu.cshtml
@@ -19,6 +19,6 @@
             </li>
         }
     }
-    <li>@Html.ActionLink("London", "AuthorsView", "Admin", new { authorID=1},null)</li>
+    <li>@Html.ActionLink("London", "AuthorsView", "Admin", new { author_ID=1},null)</li>
 </ul>
 
