--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -8,15 +8,21 @@
 <h2>Edit</h2>
 @using (Html.BeginForm())
 {
+    @Html.EditorFor(b=>b.Book_ID)
+    @Html.EditorFor(b => b.Author_ID)
     <div class="editor-label">@Html.LabelFor(b => b.Title, new { @class = "single-line" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Title, new { @class = "single-line" })</div>
-    <div class="editor-label">@Html.LabelFor(b => b.Author.Name, new { @class = "single-line" })</div>
-    <div class="editor-field">@Html.EditorFor(b => b.Author.Name, new { @class = "single-line" })</div>
+    <div class="editor-label">@Html.LabelFor(b => b.Author.First_Name, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Author.First_Name, new { @class = "single-line" })</div>
+    <div class="editor-label">@Html.LabelFor(b => b.Author.Middle_Name, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Author.Middle_Name, new { @class = "single-line" })</div>
+    <div class="editor-label">@Html.LabelFor(b => b.Author.Last_Name, new { @class = "single-line" })</div>
+    <div class="editor-field">@Html.EditorFor(b => b.Author.Last_Name, new { @class = "single-line" })</div>
     <div class="editor-label">@Html.LabelFor(b => b.Genre, new { @class = "single-line" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Genre, new { @class = "single-line" })</div>
-    <div class="editor-label">@Html.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { Title = @Model.Title, Author = @Model.Author.Name, bookID=@Model.BookID }, null )</div>
+    <div class="editor-label">@Html.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { Title = @Model.Title, Author_Name = @Model.Author.Last_Name, Author_FirstName = @Model.Author.First_Name, bookID=@Model.Book_ID }, null )</div>
     <div class="editor-field">@Html.EditorFor(b => b.Annotation, new { @class = "single-line" })</div>
-    <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, Author = @Model.Author.Name }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</div>
+    <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, last_name = @Model.Author.Last_Name, first_name=@Model.Author.First_Name, book_ID=@Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>
     <div class="editor-label">@Html.LabelFor(b => b.Price, new { @class = "single-line" })</div>
     <div class="editor-field">@Html.EditorFor(b => b.Price, new { @class = "single-line" })</div>
