--- a/BookStore/Views/Admin/Index.cshtml
+++ b/BookStore/Views/Admin/Index.cshtml
@@ -16,7 +16,13 @@
             @Html.DisplayNameFor(model => model.Title)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Author.Name)
+            @Html.DisplayNameFor(model => model.Author.First_Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Author.Middle_Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Author.Last_Name)
         </th>
         <th class="NumericCol">
             @Html.DisplayNameFor(model => model.Rating)
@@ -35,8 +41,10 @@
 
 @foreach (var item in Model) {
     <tr>
-        <td>@Html.ActionLink(item.Title, "Edit", new { item.BookID })</td>
-        <td>@Html.DisplayFor(modelItem => item.Author.Name)</td>
+        <td>@Html.ActionLink(item.Title, "Edit", new { bookID=item.Book_ID })</td>
+        <td>@Html.DisplayFor(modelItem => item.Author.First_Name)</td>
+        <td>@Html.DisplayFor(modelItem => item.Author.Middle_Name)</td>
+        <td>@Html.DisplayFor(modelItem => item.Author.Last_Name)</td>
         <td>@Html.DisplayFor(modelItem => item.Rating)</td>
         <td>@Html.DisplayFor(modelItem => item.Genre)</td>
         <td>@Html.DisplayFor(modelItem => item.Price)</td>
@@ -45,7 +53,7 @@
         <td>
             @using (Html.BeginForm("Delete", "Admin"))
             {
-                @Html.Hidden("BookID", item.BookID)
+                @Html.Hidden("BookID", item.Book_ID)
                 <input type="submit" value="Delete" />
             }
         </td>
