--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-8 col-lg-8">
             <h1>@Model.Title</h1>
-            <h2>@Model.Author.Name</h2>
+            <h2>@Model.Author.First_Name</h2> <h2>@Model.Author.Middle_Name</h2> <h2>@Model.Author.Last_Name</h2>
             <p>@Model.Genre</p>
             <p>@Model.Annotation</p>
             <h3 class="glyphicon glyphicon-star" aria-hidden="true">@Model.Rating</h3>
