--- a/BookStore/Views/Admin/Create.cshtml
+++ b/BookStore/Views/Admin/Create.cshtml
@@ -5,18 +5,32 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Create</h2>
-@using (Html.BeginForm())
+
+@using (Html.BeginForm("Create", "Admin", FormMethod.Post, new { @class = "basic-grey" }))
 {
-    <div class="editor-label">@Html.LabelFor(b => b.Title, new { @class = "single-line" })</div>
-    <div class="editor-field">@Html.EditorFor(b => b.Title, new { @class = "single-line" }) </div>
-    <div class="editor-label">@Html.LabelFor(b => b.Author.First_Name, new { @class = "single-line" })</div>
-    <div class="editor-field">@Html.EditorFor(b => b.Author.First_Name, new { @class = "single-line" })</div>
-    <div class="editor-label">@Html.LabelFor(b => b.Author.Middle_Name, new { @class = "single-line" })</div>
-    <div class="editor-field">@Html.EditorFor(b => b.Author.Middle_Name, new { @class = "single-line" })</div>
-    <div class="editor-label">@Html.LabelFor(b => b.Author.Last_Name, new { @class = "single-line" })</div>
-    <div class="editor-field">@Html.EditorFor(b => b.Author.Last_Name, new { @class = "single-line" })</div>
-    <input type="submit" value="Save" />
+    <h1><span>Create</span></h1>
+    <label>
+        <span>Title</span>
+        @Html.EditorFor(b => b.Title, new { @class = "single-line" })
+    </label>
+    <label>
+        <span>First Name</span>
+        @Html.EditorFor(b => b.Author.First_Name, new { @class = "single-line" })
+    </label>
+    <label>
+        <span>Middle Name</span>
+
+        @Html.EditorFor(b => b.Author.Middle_Name, new { @class = "single-line" })
+    </label>
+    <label>
+        <span>Last Name</span>
+        @Html.EditorFor(b => b.Author.Last_Name, new { @class = "single-line" })
+    </label>
+    <label>
+        <span>&nbsp</span>
+        <input type="submit" class="button" value="Save" />
+    </label>
+
     @Html.ActionLink("Cancel and return to List", "Index")
 }
 
