--- a/BookStore/Views/Shared/_AdminLayout.cshtml
+++ b/BookStore/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/Admin.css" rel="stylesheet" type="text/css" />
-    <link href="~/content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/jquery-1.7.1.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
@@ -15,10 +15,10 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-12">
                 @RenderBody()
             </div>
-            <div class="col-md-5 " id="search">
+            <div class="col-md-0 " id="search">
                
             </div>
         </div>
