--- a/BookStore/Content/Admin.scss
+++ b/BookStore/Content/Admin.scss
@@ -87,10 +87,142 @@ table.Grid {
 }
 
 .findedimages {
-    display: inline;  
+    display: block;
 
     img {
-        max-height: 150px;
-        max-width: 150px;
+        max-height: 250px;
+        max-width: 250px;
+    }
+}
+
+$url_0: url(down-arrow.png);
+
+%extend_1 {
+    border: 1px solid #dadada;
+    color: #888;
+    height: 30px;
+    margin-bottom: 16px;
+    margin-right: 6px;
+    margin-top: 2px;
+    outline: 0 none;
+    padding: 3px 3px 3px 5px;
+    width: 70%;
+    font-size: 12px;
+    line-height: 15px;
+    box-shadow: inset 0 1px 4px #ececec;
+}
+
+.basic-grey {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+    background: #f7f7f7;
+    padding: 25px 15px 25px 10px;
+    font: 12px Georgia, Times New Roman, Times, serif;
+    color: #888;
+    text-shadow: 1px 1px 1px #fff;
+    border: 1px solid #e4e4e4;
+
+    h1 {
+        font-size: 25px;
+        padding: 0 0 10px 40px;
+        display: block;
+        border-bottom: 1px solid #e4e4e4;
+        margin: -10px -15px 30px -10px;
+        color: #888;
+
+        span {
+            display: block;
+            font-size: 11px;
+        }
+    }
+
+    label {
+        display: block;
+        margin: 0;
+
+        span {
+            float: left;
+            width: 20%;
+            text-align: right;
+            padding-right: 10px;
+            margin-top: 10px;
+            color: #888;
+        }
+    }
+
+    input[type="text"] {
+        border: 1px solid #dadada;
+        color: #888;
+        height: 30px;
+        margin-bottom: 16px;
+        margin-right: 6px;
+        margin-top: 2px;
+        outline: 0 none;
+        padding: 3px 3px 3px 5px;
+        width: 70%;
+        font-size: 12px;
+        line-height: 15px;
+        box-shadow: inset 0 1px 4px #ececec
+         @extend %extend_1;
+    }
+
+    input[type="email"] {
+        @extend %extend_1;
+    }
+
+    textarea {
+        border: 1px solid #dadada;
+        color: #888;
+        height: 30px;
+        margin-bottom: 16px;
+        margin-right: 6px;
+        margin-top: 2px;
+        outline: 0 none;
+        padding: 3px 3px 3px 5px;
+        width: 70%;
+        font-size: 12px;
+        line-height: 15px;
+        box-shadow: inset 0 1px 4px #ececec
+         @extend %extend_1;
+        padding: 5px 3px 3px 5px;
+        height: 100px;
+    }
+
+    select {
+        border: 1px solid #dadada;
+        color: #888;
+        height: 30px;
+        margin-bottom: 16px;
+        margin-right: 6px;
+        margin-top: 2px;
+        outline: 0 none;
+        padding: 3px 3px 3px 5px;
+        width: 70%;
+        font-size: 12px;
+        line-height: 15px;
+        box-shadow: inset 0 1px 4px #ececec
+         @extend %extend_1;
+        background: #fff $url_0 no-repeat right;
+        background: #fff $url_0 no-repeat right);
+        text-indent: 0.01px;
+        width: 70%;
+        height: 35px;
+        line-height: 25px;
+    }
+
+    .button {
+        background: #e27575;
+        border: none;
+        padding: 10px 25px;
+        color: #fff;
+        box-shadow: 1px 1px 5px #b6b6b6;
+        border-radius: 3px;
+        text-shadow: 1px 1px 1px #9e3f3f;
+        cursor: pointer;
+
+        &:hover {
+            background: #cf7a7a;
+        }
     }
 }
