--- a/BookStore/Content/Site1.css
+++ b/BookStore/Content/Site1.css
@@ -25,8 +25,8 @@ DIV.content {
   padding: 1em; }
 DIV.itemb {
   border-top: 1px dotted gray;
-  padding-top: 0.7em;
-  margin-bottom: 0.7em; }
+  padding-top: 0.3em;
+  margin-bottom: 0.5em; }
   DIV.itemb:first-child {
     border-top: none;
     padding-top: 0; }
@@ -80,28 +80,28 @@ textarea {
 
 .itemb {
   margin: 10px;
-  padding: 5px; }
-  .itemb h2 {
-    color: green; }
+  padding: 2px; }
+  .itemb .title {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px; }
+  .itemb .author {
+    font-family: 'Book Antiqua';
+    font-size: 20px; }
+  .itemb .price {
+    text-align: right;
+    font-size: 16px; }
+  .itemb .annotation {
+    font-size: 12px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
+  .itemb .genre {
+    font-size: 14px; }
+  .itemb .image img {
+    max-height: 250px;
+    max-width: 250px; }
 
 DIV.pager A.selected {
   background-color: #353535;
   color: White; }
-
-.book img {
-  float: right;
-  max-width: 150px;
-  max-height: 150px; }
-.book h5 {
-  color: red; }
-.book h1 {
-  font-size: 16px; }
-.book h2 {
-  font-size: 12px; }
-.book h3 {
-  font-size: 10px; }
-.book p {
-  font-size: 10px; }
 
 .user .btn {
   margin: 4px; }
