--- a/BookStore/Views/Admin/FindBookImage.cshtml
+++ b/BookStore/Views/Admin/FindBookImage.cshtml
@@ -2,19 +2,17 @@
 @{
     ViewBag.Title = "FindBookImages";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
-     
+
 }
-<h2>Finded</h2>
+<h2>Finded Images</h2>
 @foreach (string result in @Model)
 {
-    <span class="findedimages">       
-<<<<<<< HEAD
-        @Ajax.ActionLink("Save", "Edit", "Admin", new { bookID = (int)ViewData["BookID"], image_url = result.Url }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })
-        <img class="thumbnail" src=@result.Url>
-=======
-        @Ajax.ActionLink("Save", "SaveBookImage", "Admin", new { imageUrl = result, bookID = (int)ViewData["BookID"]  }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })
-        <img class="thumbnail" src=@result>
->>>>>>> 5db0ecd8f1f2afb8c683874a0406bc8595bf4f81
+    <span class="findedimages">
+        <a href='@Url.Action("Edit", "Admin", new { image_url = result, bookID = (int)ViewData["BookID"] })'>
+            <img src='@result' class="thumbnail" />
+        </a>
+        @*@Ajax.ActionLink("Save", "Edit", "Admin", new { image_url = result, bookID = (int)ViewData["BookID"] }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })
+        <img class="thumbnail" src=@result>*@
     </span>
 }
 
