--- a/BookStore/Content/Admin.css
+++ b/BookStore/Content/Admin.css
@@ -63,10 +63,79 @@ table.Grid {
   height: 5em;
   font-family: Segoe UI, Verdana; }
 
-#search {
+.search {
   display: inline-flex; }
-  #search img {
-    max-height: 150px;
-    max-width: 150px; }
+  .search img {
+    max-height: 200px;
+    max-width: 200px; }
+
+.basic-grey input[type="text"], .basic-grey input[type="email"], .basic-grey textarea, .basic-grey select {
+  border: 1px solid #dadada;
+  color: #888;
+  height: 30px;
+  margin-bottom: 16px;
+  margin-right: 6px;
+  margin-top: 2px;
+  outline: 0 none;
+  padding: 3px 3px 3px 5px;
+  width: 70%;
+  font-size: 12px;
+  line-height: 15px;
+  box-shadow: inset 0 1px 4px #ececec; }
+
+.basic-grey {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 700px;
+  background: #f7f7f7;
+  padding: 25px 15px 25px 10px;
+  font: 12px "Georgia", "Times New Roman", "Times", "serif";
+  color: #888;
+  text-shadow: 1px 1px 1px #fff;
+  border: 1px solid #e4e4e4;
+  text-align: center; }
+  .basic-grey h1 {
+    font-size: 25px;
+    padding: 0 40px 10px 40px;
+    display: block;
+    border-bottom: 1px solid #e4e4e4;
+    margin: -10px -15px 30px -10px;
+    color: #888; }
+    .basic-grey h1 span {
+      display: block;
+      font-size: 17px; }
+  .basic-grey label {
+    display: block;
+    margin: 0; }
+    .basic-grey label span {
+      float: left;
+      width: 40%;
+      text-align: left;
+      padding-right: 10px;
+      margin-top: 10px;
+      color: #888; }
+  .basic-grey textarea {
+    padding: 5px 3px 3px 5px;
+    height: 100px; }
+  .basic-grey select {
+    background: #fff url("down-arrow.png") no-repeat right;
+    background: #fff url("down-arrow.png") no-repeat right;
+    appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
+    width: 70%;
+    height: 35px;
+    line-height: 25px; }
+  .basic-grey .button {
+    background: #e27575;
+    border: none;
+    padding: 10px 25px;
+    color: #fff;
+    box-shadow: 1px 1px 5px #b6b6b6;
+    border-radius: 3px;
+    text-shadow: 1px 1px 1px #9e3f3f;
+    cursor: pointer; }
+    .basic-grey .button:hover {
+      background: #cf7a7a; }
 
 /*# sourceMappingURL=Admin.css.map */
