--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" id="edit">
             <h2>Edit</h2>
             @using (Html.BeginForm())
             {
@@ -30,7 +30,7 @@
                 <div class="editor-label">@Html.LabelFor(b => b.Price, new { @class = "single-line" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Price, new { @class = "single-line" })</div>
                 <input type="submit" value="Save" />
-                @Html.ActionLink("Cancel and return to List", "Index")
+                <button class="basic-grey" href="@Url.Action("Index","Admin")">Cancel</button>                
             }
         </div>
         <div class="col-md-8">
