--- a/BookStore/Views/Shared/_AdminLayout.cshtml
+++ b/BookStore/Views/Shared/_AdminLayout.cshtml
@@ -6,10 +6,9 @@
     <link href="~/Content/Admin.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <script src="~/scripts/jquery-1.9.1.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/scripts/jquery.unobtrusive-ajax.js"></script>
+    <script src="~/scripts/addfield.js"></script>
     <title></title>
 </head>
 <body>
@@ -19,13 +18,25 @@
                 @RenderBody()
             </div>
             <div class="col-md-0 ">
-               
+
             </div>
         </div>
     </div>
     @if (TempData["message"] != null)
     {
         <div class="Message">@TempData["message"]</div>
+    }
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+        // переопределение валидации на стороне клиента
+        $.validator.methods.range = function (value, element, param) {
+        var globalizedValue = value.replace(",", ".");
+        return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
+        }
+
+        $.validator.methods.number = function (value, element) {
+        return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+        }
     }
 </body>
 </html>
