--- a/BookStore/Views/Admin/FindBookAnnotation.cshtml
+++ b/BookStore/Views/Admin/FindBookAnnotation.cshtml
@@ -1,9 +1,15 @@
-﻿@model string
+﻿@model List<string>
+@using BookStore.HtmlHelpers
 
 @{
     ViewBag.Title = "FindBookAnnotation";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = null;
 }
 
 <h2>FindBookAnnotation</h2>
-<p>@Model</p>
+@foreach (string result in @Model)
+{
+    <span class="search">
+        @Ajax.ActionLink(result, "SaveAnnotation", "Admin", new { annotation = @result.ToString(), bookId = (int)ViewData["BookID"] }, new AjaxOptions { UpdateTargetId = "edit", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })
+    </span>
+}
