--- a/BookStore/Views/Book/List.cshtml
+++ b/BookStore/Views/Book/List.cshtml
@@ -9,5 +9,5 @@
 }
 
 <div class="pager">
-    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x, genre = Model.CurrentGenre }))
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action(ViewBag.Action, new { page = x, genre = Model.CurrentGenre }))
 </div>
