--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -4,17 +4,20 @@
         <div class="col-md-10 col-lg-10 ">
             <p class="title">@Model.Title</p>
             <p class="author">@Model.Author.First_Name @Model.Author.Middle_Name @Model.Author.Last_Name</p>
-            <p class="genre">@Model.Genre</p>
+            <p class="genre">@Model.Genre.Genre_Name</p>
             <p class="annotation">@Model.Annotation</p>
             <p class="glyphicon glyphicon-star rate" aria-hidden="true">@Model.Rating</p>
             <p class="price">@Model.Price.ToString("c")</p>
+            <p class="genre">Теги:</p>
+            <div class="tags">
+                @foreach (var tag in @Model.Tages)
+                {
+                    @Html.ActionLink(tag.Tag_Name, "ListByTag", "Book", new { tagID=tag.Tag_ID},null)
+                }
         </div>
-        <div class="col-md-2 col-lg-2 image">
-            <img src="@Model.Image_url" class="img-thumbnail" />
-        </div>
-    </div>   
+    </div>
+    <div class="col-md-2 col-lg-2 image">
+        <img src="@Model.Image_url" class="img-thumbnail" />
+    </div>
 </div>
-
-
-
-
+</div>
